--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.3.0",
+    "express": "^5.1.0",
     "file-saver": "^2.0.5",
     "input-otp": "^1.2.4",
     "lucide-react": "^0.462.0",
@@ -83,5 +84,18 @@
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.0.1",
     "vite": "^5.4.1"
-  }
+  },
+  "description": "**URL**: https://lovable.dev/projects/42159611-d0d7-4435-b397-ad651ec2c58d",
+  "main": "eslint.config.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/khaled-zaattor/lovable-safety-guide.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/khaled-zaattor/lovable-safety-guide/issues"
+  },
+  "homepage": "https://github.com/khaled-zaattor/lovable-safety-guide#readme"
 }
