--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@supabase/supabase-js": "^2.76.1",
     "@tanstack/react-query": "^5.56.2",
     "@types/file-saver": "^2.0.7",
+    "axios": "^1.6.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
@@ -97,5 +98,10 @@
   "bugs": {
     "url": "https://github.com/khaled-zaattor/lovable-safety-guide/issues"
   },
-  "homepage": "https://github.com/khaled-zaattor/lovable-safety-guide#readme"
+  "homepage": "https://github.com/khaled-zaattor/lovable-safety-guide#readme",
+  "jest": {
+    "moduleNameMapper": {
+      "^axios$": "axios/dist/node/axios.cjs"
+    }
+  }
 }
